--- a/react/src/webshop/i18n/translated/en-US.json
+++ b/react/src/webshop/i18n/translated/en-US.json
@@ -3421,13 +3421,12 @@
     },
     "pre_check": {
         "breadcrumb": {
-            "check": "The Pots check",
-            "home": "Home"
+            "home": "Home",
+            "check": "Scheme check"
         },
         "funds": "Funds",
         "next_step": "Next",
         "no_value": "---",
-        "of": "from",
         "previous_step": "Previous step",
         "search": "Search",
         "show_less": "Show less",
@@ -3441,7 +3440,8 @@
         "total_amount": "Total amount",
         "total_offers": "Total supply",
         "your_data": "Your data",
-        "record_required": "The {{ title }} field is required."
+        "progress": "Step {{step}} of {{total}}",
+        "record_required": "It is mandatory to fill in this field."
     },
     "navbar": {
         "vergoedingen": {
